# MeshPolygonization

./: How_to_build.md
data/: arc.off-result.ply
src/: CMakeLists copy.md  CMakeLists.txt
src/Polygonization/: CMakeLists copy.txt  CMakeLists.txt  CandidateFace.h  FileWritter.h  Intersection.h  Optimization.h  Orientation.h  PlanarSegmentation.cpp  Planarity copy.txt  Planarity.cpp  Segment.h  Simplification.cpp  StructureGraph.cpp  main.cpp
src/Polygonization/cmake/: FindGUROBI.cmake  UseCGAL.cmake
src/Polygonization/solver/: linear_program_solver.cpp  linear_program_solver_SCIP.cpp
